@@ -1,3 +1,7 @@
+2015-05-15	Daniel Hawkins (SilverNexus)
+	* random_maps/special.c: Fix fountain material to prevent fountains
+	that are actually potions from being destroyed.
+
 2015-03-24	Rick Tanner
 	* lib/config/metaserver2: Add entries for additional metaservers, one
 	in the US and the other in EU.
